--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -21,6 +21,8 @@
     "@ng-icons/core": "^29.0.0",
     "@ng-icons/font-awesome": "^29.0.0",
     "@ng-icons/heroicons": "^29.0.0",
+    "@ngx-translate/core": "^15.0.0",
+    "@ngx-translate/http-loader": "^8.0.0",
     "angular-svg-icon": "^18.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
